--- a/package.json
+++ b/package.json
@@ -1,17 +1,33 @@
 {
+  "type": "module",
   "name": "imagetrans",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "electron.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "electron:dev": "electron .",
+    "electron:build": "electron-builder"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "imagemagick": "^0.1.3",
-    "pica": "^9.0.1",
-    "shark": "^2.3.0",
+    "electron-is-dev": "^3.0.1",
     "sharp": "^0.33.4"
+  },
+  "devDependencies": {
+    "electron": "^30.0.8",
+    "electron-builder": "^24.13.3"
+  },
+  "homepage": "./",
+  "build": {
+    "appId": "com.example.icon-builder-app",
+    "files": [
+      "build/**/*",
+      "electron.js",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   }
 }
